@@ -1,1 +1,5 @@
 # pet-store
+
+JAVA_TOOL_OPTIONS=-XX:TieredStopAtLevel=1 -Xverify:none -Dspring.jmx.enabled=false
+
+Duration: 2445.14 ms
